# WinIsland

./: Cargo.toml  README-zh.md  README.md  build.rs
Page/: index.md
Page/.vitepress/: config.mts
resources/in_app/lang/: en.lang  zh.lang
src/: main.rs
src/core/: config.rs  i18n.rs  render.rs  smtc.rs
src/icons/: arrows.rs  controls.rs  mod.rs  settings.rs
src/ui/expanded/: main_view.rs  mod.rs  tools_view.rs
src/utils/: blur.rs  font.rs  icon.rs  mod.rs  physics.rs  scroll.rs  updater.rs
src/utils/settings_ui/: input.rs  items.rs  renderer.rs
src/window/: app.rs  music_settings.rs  settings.rs  tray.rs
